----------------------------------------------------------------------
 OmegaT 2.3.0 update 4
----------------------------------------------------------------------
   1 Enhancement
   3 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
2.3.0 update 4 vs. 2.3.0 update 3

  Other enhancements:

  - As the Google Translate API v1 has been shutt off (see 
http://code.google.com/apis/language/translate/v1/getting_started.html), 
the corresponding menu entry has been removed

  Bug fixes:

  - Java 7 compilation encoding errors
  http://sourceforge.net/support/tracker.php?aid=3440901

  - When several dictionaries were used, words written in uppercase in 
the dictionaries could fail to be recognised

  - NetBSD and DragonFky not recognized as UNIX
  http://sourceforge.net/support/tracker.php?aid=3451034

  Localisation updates:  
  - Slovenian localisation updated to 2.3 (UI)
  - Dutch localisation updated to 2.3 (backported from 2.5.0 update 3) (documentation)

----------------------------------------------------------------------
 OmegaT 2.3.0 update 3
----------------------------------------------------------------------
   1 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.3.0 update 3 vs. 2.3.0 update 2

  Implemented requests:

  - Google Translate API v2
  http://sourceforge.net/support/tracker.php?aid=3426058

  Bug fixes:

  - Open XML filter: <rPh> tags (phonetic pronunciation) were not 
hidden in OmegaT

----------------------------------------------------------------------
 OmegaT 2.3.0 update 2
----------------------------------------------------------------------
   1 Enhancement
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.3.0 update 2 vs. 2.3.0 update 1

  Other enhancements:

  - Apertium: remove '*' before unknown words and do not translate
tags
  